fix nav alignment for mobile

--- a/web/src/components/header/header.module.css
+++ b/web/src/components/header/header.module.css
@@ -123,7 +123,7 @@
   text-decoration: none;
   color: inherit;
   margin: 1em 0;
-  font-size: var(--font-title2-size);
+  font-size: var(--font-title3-size);
 
   @media (--media-min-small) {
     font-size: var(--font-large-size);
